--- a/pages/contact.html
+++ b/pages/contact.html
@@ -310,7 +310,7 @@
 </div> 
 <div class="w-[100%] h-[400px] bg-[#464646] mt-auto flex justify-center items-center">
             <div class="mapg  m-auto">
-                <iframe class="rounded-md max-w-[90%] ml-auto mr-auto" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1722.3147055791142!2d31.705351!3d30.30461!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1457ffef1722bc33%3A0x12a16f615ebf9f18!2z2YXYr9mD2YjYsSDZhNmE2LXZhtin2LnYp9iqINin2YTZh9mG2K_Ys9mK2Kk!5e0!3m2!1sen!2sus!4v1683202112068!5m2!1sen!2sus" width="1000" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="rounded-md max-w-[90%] ml-auto mr-auto" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d430.5794653866583!2d31.705440492342277!3d30.304430366035287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1457ffef1722bc33%3A0x12a16f615ebf9f18!2z2YXYr9mD2YjYsSDZhNmE2LXZhtin2LnYp9iqINin2YTZh9mG2K_Ys9mK2Kk!5e0!3m2!1sar!2seg!4v1685892685042!5m2!1sar!2seg" width="1000" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         
