--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./dist/output.css">
+    
     
     <link rel="icon" type="image/x-icon" href="./img/logo.ico">
     <!-- fontawsone  -->
