--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./dist/output.css">
-    
-    
+    <link rel="stylesheet" href="./src/input.css">
     <link rel="icon" type="image/x-icon" href="./img/logo.ico">
     <!-- fontawsone  -->
     <link rel="stylesheet" href="./src/all.min.css">
