--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         Trusted By
     </h1>
 
-    <div class="container mx-auto relative">
+    <div class="container mx-auto relative overflow-hidden ">
         
 
         <div class="carousel-items flex items-center justify-center overflow-hidden " style="width: fit-content; animation: carouselAnim 4s infinite alternate linear;">
