--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </nav>
       
 
-            <button class="btn bg-black text-[#f15a29]">AR</button>
+            <button class="btn bg-black style="color: #f15a29;">AR</button>
           </div>
       </div>
       <div class="ham hidden max-sm:flex max-sm:justify-center max-sm:absolute ">
