--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           
           <div class="  max-sm:text-center flex items-center">
               <img class="h-16 " src="./img/logo.png" alt="" />
-              <p class=" uppercase text-[#f15a29] pr-24">Madcur <span class="text-white">CNC</span></p>
+              <p class=" uppercase  pr-24" style="color: #f15a29;">Madcur <span class="text-white">CNC</span></p>
           </div>
           <div class="flex">
           <nav class="pr-8 contents font-maven text-base lg:text-lg max-sm:hidden">
@@ -58,7 +58,7 @@
           </nav>
       
 
-            <button class="btn bg-black style="color: #f15a29;">AR</button>
+            <button class="btn bg-black " style="color: #f15a29;">AR</button>
           </div>
       </div>
       <div class="ham hidden max-sm:flex max-sm:justify-center max-sm:absolute ">
