--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
     <!-- end start nav and header  -->
     <!-- scroll to top button  -->
     <button id="to-top-button" onclick="goToTop()" title="Go To Top"
-        class="hidden fixed z-90 bottom-8 right-8 border-0 w-10 h-10 rounded-full drop-shadow-md bg-[#f15a29] text-white text-3xl font-bold">&uarr;</button>
+        class="hidden fixed z-90 bottom-8 right-8 border-0 w-10 h-10 rounded-full drop-shadow-md bg-[#f15a29] text-white text-3xl font-bold" style=" position: fixed;
+        bottom: 5px;
+        right: 5px;
+        width: 35px;">&uarr;</button>
 
     <!-- about -->
 
