--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         Trusted By
     </h1>
 
-    <div class="container mx-auto relative">
+    <div class="container mx-auto relative" style="overflow: hidden;">
         
 
         <div class="carousel-items flex items-center justify-center overflow-hidden " style="width: fit-content; animation: carouselAnim 4s infinite alternate linear;">
